--- a/index.css
+++ b/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar {
+  color: purple;
+}
+
+header,
+footer,
+.content {
+  padding-left: 16px;
+}
